# modern_llm

./: .gitignore  .venv  PHASE1_PHASE2_COMMANDS.md  PHASE1_PHASE2_IMPLEMENTATION_SUMMARY.md  PROJECT_PLAN.md  README.md  clone_repos.ps1  clone_repos.sh  pyproject.toml  pytest.ini  requirements.txt  speedrun.sh  tree.py  tree.txt
.cursor/: rules
configs/: README.md  lm_max_rtx3060.json  local_rtx3060.json  smoke_test.json  tacc_a100.json  tacc_h100.json
data/: README.md
docs/: TACC_MIGRATION.md
experiments/: README.md  comparison_log.txt  comparison_log_v2.txt  experiment_diary.md  gsm8k_benchmark.json  gsm8k_errors.json  gsm8k_eval_metrics.csv  model_comparison.json  phase2_log.txt  pipeline_state.json  prompting_baseline_results.csv  samsum_eval_metrics.csv  sst2_eval_metrics.csv  sst2_misclassified.json
logs/: modern-llm-alignment_2774919.err  modern-llm-alignment_2774919.out  modern-llm-eval_2775100.out  modern-llm-h100_2777249.err  modern-llm-h100_2777249.out  modern-llm-h100_2782103.out  modern-llm-smoke_2770213.err  modern-llm-smoke_2770213.out  modern-llm-speedrun_2771310.err  modern-llm-speedrun_2771310.out  modern-llm-speedrun_2773088.err  modern-llm-speedrun_2773088.out  test-datasets_2781065.err  test-datasets_2781065.out
notebooks/: README.md  visualize_lm_results.py
report/: ACL_REPORT.md  README.md  final_report.md  final_tacc_report.md  gsm8k_benchmark_report.md  tacc-full-v2_report.md  tacc-full_report.md  tacc-smoke_report.md
scripts/: README.md  benchmark_gsm8k.py  compare_scratch_vs_gpt2.sh  dpo.py  eval_perplexity.ps1  finetune_gsm8k.py  (+36 more)
(+116 files in other folders)
